--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://peterneely.github.io/launch",
   "dependencies": {
     "gh-pages": "^2.1.1",
+    "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
