--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "version": "1.0",
     "description": "Launch links",
     "manifest_version": 2,
-    "permissions": ["tabs"],
+    "permissions": ["bookmarks", "tabs"],
     "background": {
         "scripts": ["background.js"],
         "persistent": false
