--- a/manifest.json
+++ b/manifest.json
@@ -12,16 +12,14 @@
   "icons": {
     "128": "./assets/icon.png"
   },
-  "content_scripts": [
-    {
-      "js": ["contentscript.js"],
-      "css": ["contentscript.css"],
-      "matches": ["<all_urls>"]
-    }
-  ],
+  "content_scripts": [{
+    "js": ["contentscript.js"],
+    "css": ["contentscript.css"],
+    "matches": ["<all_urls>"]
+  }],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
   },
-  "content_security_policy": "script-src 'self' 'unsafe-eval' 'sha256-...='; object-src 'self'"
+  "content_security_policy": "script-src 'self'; object-src 'self'"
 }
