--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "sourceMap": false,
+    "sourceMap": true,
     "types": ["@types/chrome", "node"],
     "typeRoots": ["node_modules/@types"],
     "moduleResolution": "node",
