--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,13 @@
   "short_name": "React & Typescript based Chrome Extension",
   "version": "1.0.0",
   "description": "Chrome Extension with React and Typescript Starter Pack",
-  "permissions": ["tabs", "activeTab", "storage"],
+  "permissions": ["bookmarks", "tabs", "activeTab", "storage"],
   "browser_action": {
     "default_popup": "popup/index.html",
     "default_title": "React Chrome Extension Starter"
+  },
+  "chrome_url_overrides": {
+    "newtab": "popup/index.html"
   },
   "icons": {
     "128": "./assets/icon.png"
@@ -21,5 +24,5 @@
     "scripts": ["background.js"],
     "persistent": false
   },
-  "content_security_policy": "script-src 'self'; object-src 'self'"
+  "content_security_policy": "script-src 'self' 'sha256-18j9+nErtuKtcSwKvHjJxqQJK1kCjNV0fFqZIbKBDDY='; object-src 'self'"
 }
