--- a/src/tab/public/manifest.json
+++ b/src/tab/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Launch",
+  "name": "Launch",
   "icons": [{
     "src": "favicon.ico",
     "sizes": "64x64 32x32 24x24 16x16",
@@ -9,5 +9,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#444541"
+  "background_color": "#ffffff"
 }
