--- a/src/app/package.json
+++ b/src/app/package.json
@@ -12,8 +12,11 @@
     "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.0.1",
     "react-transition-group": "^4.3.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "typescript": "3.5.3"
   },
   "scripts": {
@@ -39,6 +42,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-transition-group": "^4.2.3"
+    "@types/react-transition-group": "^4.2.3",
+    "redux-devtools": "^3.5.0",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
