--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "default_title": "React Chrome Extension Starter"
   },
   "chrome_url_overrides": {
-    "newtab": "app/index.html"
+    "newtab": "main/index.html"
   },
   "icons": {
     "128": "./assets/icon.png"
