--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "sass-loader": "^7.1.0",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
-    "typescript": "^3.5.3",
+    "typescript": "3.5.3",
     "webpack": "4.29.6",
     "webpack-cli": "^3.3.6"
   }
