--- a/src/main/package.json
+++ b/src/main/package.json
@@ -17,6 +17,7 @@
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "remote-redux-devtools": "^0.5.16",
     "typescript": "3.5.3"
   },
   "scripts": {
