--- a/src/main/package.json
+++ b/src/main/package.json
@@ -44,7 +44,6 @@
   },
   "devDependencies": {
     "@types/react-transition-group": "^4.2.3",
-    "redux-devtools": "^3.5.0",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools": "^3.5.0"
   }
 }
