--- a/src/main/package.json
+++ b/src/main/package.json
@@ -9,6 +9,7 @@
     "@types/node": "12.6.8",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
+    "is-color": "^1.0.2",
     "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
