--- a/src/main/package.json
+++ b/src/main/package.json
@@ -18,7 +18,6 @@
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "remote-redux-devtools": "^0.5.16",
     "typescript": "3.5.3"
   },
   "scripts": {
@@ -45,6 +44,7 @@
   },
   "devDependencies": {
     "@types/react-transition-group": "^4.2.3",
-    "redux-devtools": "^3.5.0"
+    "redux-devtools": "^3.5.0",
+    "remote-redux-devtools": "^0.5.16"
   }
 }
